--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -15,7 +15,7 @@ h1, h2, h3 {
 
 /* Hero Section */
 .hero-section {
-    background-image: url('../images/hero-background.jpg');
+    background-image: url('https://images.unsplash.com/photo-1600891964599-f61ba0e24092?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwzNjUyOXwwfDF8c2VhcmNofDEyfGNsZWFuaW5nJTIwcHJvZHVjdHN8ZW58MHx8fHwxNjgwODY4ODg2&ixlib=rb-1.2.1&q=80&w=1200');
     background-size: cover;
     background-position: center;
     height: 70vh;
@@ -25,6 +25,7 @@ h1, h2, h3 {
     text-align: center;
     color: #fff;
 }
+
 
 .hero-content h1 {
     font-size: 48px;
